--- a/style.css
+++ b/style.css
@@ -1,52 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
 
-.main-container {
-    font-family: "Roboto";
+:root {
+  --white: #fff;
+  --black: #1c2b2d;
+  --blue: #31326f;
+  --light-blue: #005490;
+  --color-primary: #9d0191;
+  --color-sec: #db6400;
+  --color-grey: #eee;
+  --color-dark-grey: #222831;
 }
 
-.wiki-search-header {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #d5cdcd;
-    padding-top: 30px;
-    padding-right: 20px;
-    padding-bottom: 30px;
-    padding-left: 20px;
-    margin-bottom: 40px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.wiki-logo {
-    width: 150px;
-    margin-bottom: 30px;
+html {
+  font-size: 10px;
 }
 
-.search-input {
-    font-size: 18px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #d5cdcd;
-    border-radius: 3px;
-    padding: 10px;
+body {
+  font-family: "Open Sans", sans-serif;
 }
 
-.search-results {
-    width: 100%;
-    padding-left: 20px;
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
 }
 
-.result-item {
-    margin-bottom: 20px;
+img {
+  width: 30%;
 }
 
-.result-title {
-    font-size: 22px;
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
-.link-description {
-    color: #444444;
-    font-size: 15px;
+/* Start Here */
+form {
+  position: relative;
 }
 
-.result-url {
-    color: #006621;
-    text-decoration: none;
+button {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  border: none;
+  outline: none;
+}
+
+form i {
+  font-size: 1.6rem;
+  color: var(--light-blue);
+}
+
+.hide {
+  display: none;
 }
